--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yamm",
-  "version": "0.0.1",
-  "description": "Yet Another Media Module",
+  "version": "0.0.2",
+  "description": "Media process manager",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/jonathonball/yamm.git"
   },
-  "author": "Jonathon Ball",
+  "author": "Jon Ball",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jonathonball/yamm/issues"
   },
-  "homepage": "https://github.com/jonathonball/yamm#readme"
+  "homepage": "https://github.com/jonathonball/yamm#readme",
+  "devDependencies": {
+    "terminal-kit": "^1.26.2"
+  }
 }
